@@ -1,3 +1,7 @@
+2010-11-29 Philipp Klaus Krause <pkk AT spth.de>
+	* support/regression/tests/bug-3117729.c:
+	  Added bug description.
+
 2010-11-28 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peeph-z80.def,
